# Texel-BodyScan-Dataset

./: .gitmodules  CMakeLists.txt  LICENSE-CODE  LICENSE-DATA  README.md
utilities/: Defs.h  Main.cpp  Scanogram.cpp  Scanogram.h  ScanogramFinder.cpp  ScanogramFinder.h
